# neurips26-beyond_mask

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: test-writer.md
.claude/skills/run-pipeline/: SKILL.md
.serena/: project.yml
__marimo__/session/: openrouter_playground.py.json
bench_setup/: dataset_processing.py
edited_mask_data/: provided_facts_omission_edited(edited_prompts).csv
mailbench/: _common.py  build_site.py  elicit_beliefs.py  judge.py  metrics.py  run_episodes.py
mailbench/templates/: base.html  episode.html  index.html
mask/: .gitignore
mask/mask/: README.md  evaluate.py  generate_responses.py  metric.py
notebooks/: mask_pipeline_explorer.py  openrouter_playground.py  skills-lock.json
scripts/: evalaware_batch_run.py  evalaware_cost.py  evalaware_judge.py  evalaware_report.py  run_mask_batch_generation.sh  run_mask_batch_manifest.py  run_mask_judge_batch.py  summarize_mask_results.py
src/beyond_mask/: evalaware.py  openrouter.py  results.py
tests/: test_dataset_processing.py  test_evalaware.py  test_mailbench_build_site.py  test_mailbench_common.py  test_mailbench_metrics.py  test_mailenv_beliefs.py  test_mailenv_episode.py  test_mailenv_judging.py  test_mailenv_personas.py  test_mailenv_scenario.py  test_mailenv_store.py  test_mailenv_tooldefs.py  test_mask_batch_manifest.py  test_mask_evaluate.py  test_mask_summary.py  test_openrouter.py  test_openrouter_playground.py  test_run_mask_batch_script.py  test_run_mask_judge_batch_cli.py  test_scenarios_valid.py
(+248 files in other folders)
