[project]
name = "neurips26-beyond-mask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0",
    "httpx>=0.27",
    "huggingface-hub>=1.14.0",
    "ipython>=9.13.0",
    "marimo>=0.23.6",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beyond_mask"]

[dependency-groups]
dev = [
    "altair>=6.1.0",
    "duckdb>=1.5.2",
    "mcp>=1",
    "nbformat>=5.10.4",
    "openai>=2.36.0",
    "polars[pyarrow]>=1.40.1",
    "pydantic>=2",
    "python-lsp-ruff>=2.3.1",
    "python-lsp-server>=1.14.0",
    "sqlglot>=30.7.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "websockets>=16.0",
]
